fix: footer layout on mobile

--- a/main.css
+++ b/main.css
@@ -539,7 +539,9 @@ div.suggestion-nav {
     }
     .footer-menu-content {
         padding: 0;
-        width: fit-content;
+    }
+    .footer-menu-container {
+        width: 50%;
     }
 }
 
